--- a/.github/workflows/generate-pdfs.yml
+++ b/.github/workflows/generate-pdfs.yml
@@ -1,1 +1,46 @@
-
+name: Generate PDF Manuals
+on:
+  # 只保留手动触发，且必须指定手册路径
+  workflow_dispatch:
+    inputs:
+      manual_path:
+        description: '指定要生成PDF的手册路径'
+        required: true
+  
+jobs:
+  build-pdfs:
+    runs-on: ubuntu-latest
+    
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+      
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.10'
+      
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install pandoc-latex-environment
+          pip install weasyprint
+          sudo apt-get update
+          sudo apt-get install -y pandoc
+      
+      - name: Create output directory
+        run: mkdir -p pdf-output
+      
+      - name: Generate PDF
+        run: |
+          # 只处理指定手册
+          python .github/scripts/generate_pdf.py --dir "${{ github.event.inputs.manual_path }}" --output pdf-output --css styles/default.css --author "Z-Series"
+      
+      - name: Upload PDF as artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: pdf-manual-${{ github.event.inputs.manual_path }}
+          path: pdf-output/*.pdf
+          retention-days: 30
