--- a/.github/workflows/generate-pdfs.yml
+++ b/.github/workflows/generate-pdfs.yml
@@ -8,44 +8,49 @@ on:
   
 jobs:
   build-pdfs:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04  # 改用更稳定的 22.04 LTS
+    # 如果必须用 24.04，请取消下一行注释
+    # runs-on: ubuntu-latest
     
     steps:
-      # 1. 检出代码
       - name: Checkout repository
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
       
-      # 2. 设置Python环境（保留原有）
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: '3.10'
       
-      # 3. 安装系统依赖（新增中文字体）
-      - name: Install dependencies
+      - name: Install system dependencies (关键修复)
         run: |
-          # 安装系统依赖
-          sudo apt-get update
-          sudo apt-get install -y \
-            fonts-noto-cjk \          # 新增：中文字体
-            pandoc \
-            texlive-xelatex \         # 新增：支持中文的LaTeX引擎
-            texlive-fonts-recommended
+          # 1. 强制更新软件源
+          sudo apt-get update -y
           
-          # Python依赖（保留原有）
+          # 2. 安装基础依赖（兼容新旧Ubuntu版本）
+          sudo apt-get install -y \
+            fonts-noto \                   # 基础字体包
+            fonts-noto-cjk \               # 中日韩字体
+            fonts-noto-core \              # 核心字体
+            pandoc \
+            texlive-xelatex \
+            texlive-fonts-recommended \
+            python3-pip \
+            python3-venv
+          
+          # 3. 验证字体安装
+          echo "=== 已安装中文字体 ==="
+          fc-list :lang=zh | grep "Noto" || echo "警告：未检测到中文字体"
+      
+      - name: Install Python packages
+        run: |
           python -m pip install --upgrade pip
           pip install \
             pandoc-latex-environment \
-            weasyprint \
+            weasyprint==58.1 \            # 固定稳定版本
             pygments
-          
-          # 验证字体安装
-          echo "已安装的中文字体："
-          fc-list :lang=zh | grep "Noto Sans CJK" || echo "警告：中文字体未安装成功"
       
-      # 4. 调试步骤（完全保留原有）
       - name: Debug repository structure
         run: |
           echo "Current working directory: $(pwd)"
@@ -58,11 +63,9 @@ jobs:
           echo "Target manual directory:"
           ls -la "${{ github.event.inputs.manual_path }}" || echo "Directory ${{ github.event.inputs.manual_path }} not found"
       
-      # 5. 创建输出目录（保留原有）
       - name: Create output directory
         run: mkdir -p pdf-output
       
-      # 6. 验证文件存在（保留原有）
       - name: Verify Python script existence
         run: |
           if [ -f ".github/scripts/generate_pdf.py" ]; then
@@ -83,45 +86,41 @@ jobs:
             exit 1
           fi
       
-      # 7. 测试脚本（保留原有）
       - name: Test Python script
         run: |
           python .github/scripts/generate_pdf.py --help || echo "Script returned error when running --help"
       
-      # 8. 生成PDF（新增字体测试）
       - name: Generate PDF with verbose output
         run: |
-          set -x  # 打开调试输出
+          set -x  # 开启详细日志
           
-          # 新增：测试中文字体渲染
-          echo -e '<html><body><p>中文测试：显示屏(非触控)</p></body></html>' > font-test.html
-          python -m weasyprint font-test.html font-test.pdf
-          ls -la font-test.pdf
+          # 生成测试PDF验证中文支持
+          echo '<!DOCTYPE html><html><body><p>中文测试：产品外观</p></body></html>' > chinese-test.html
+          python -m weasyprint chinese-test.html chinese-test.pdf
+          ls -la chinese-test.pdf
           
-          # 原有生成命令
+          # 正式生成PDF
           python .github/scripts/generate_pdf.py \
             --dir "${{ github.event.inputs.manual_path }}" \
             --output pdf-output \
             --css .github/styles/default.css \
             --author "Z-Series" \
-            --verbose || { 
-              echo "PDF generation failed with exit code $?"
-              ls -la pdf-output
+            --verbose || {
+              echo "PDF生成失败，退出码：$?"
+              ls -la pdf-output/
               exit 1
             }
           
-          echo "Generated PDF files:"
+          echo "生成的PDF文件："
           ls -la pdf-output/
       
-      # 9. 设置产物名称（优化路径处理）
       - name: Set artifact_name
         run: |
-          # 替换路径中的特殊字符
-          safe_name=$(echo "${{ github.event.inputs.manual_path }}" | tr '/' '-' | tr ' ' '_')
+          # 安全处理路径名称（替换特殊字符）
+          safe_name=$(basename "${{ github.event.inputs.manual_path }}" | tr -d '/\\:*?"<>|' | tr ' ' '_')
           echo "ARTIFACT_NAME=pdf-manual-${safe_name}" >> $GITHUB_ENV
-          echo "Generated artifact name: ${ARTIFACT_NAME}"
+          echo "生成的产物名称：${ARTIFACT_NAME}"
       
-      # 10. 上传产物（保留原有）
       - name: Upload PDF as artifact
         uses: actions/upload-artifact@v4
         with:
