--- a/.github/workflows/generate-pdfs.yml
+++ b/.github/workflows/generate-pdfs.yml
@@ -83,6 +83,6 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
-          name: manual-${{ github.event.inputs.manual_path | replace('/', '-') }}
+          name: manual-${{ replace(github.event.inputs.manual_path, '/', '-') }}
           path: pdf-output/*.pdf
           retention-days: 30
